Add an endpoint with latest revision
